--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "server=127.0.0.1;database=dbname;user=root;password="
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
